--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"format": "prettier --write src/**/*.ts",
 		"typecheck": "tsc --noEmit",
 		"validate": "pnpm lint && pnpm test -- run && pnpm typecheck && pnpm build",
+		"prepublishOnly": "pnpm validate && pnpm build",
 		"prepare": "husky install"
 	},
 	"keywords": [
@@ -56,6 +57,7 @@
 		"koa": ">=2"
 	},
 	"devDependencies": {
+		"@michaelhelvey/microtest": "^2.1.0",
 		"@remix-run/node": "^1.7.2",
 		"@remix-run/server-runtime": "^1.7.2",
 		"@types/koa": "^2.13.5",
