--- a/playground/package.json
+++ b/playground/package.json
@@ -15,9 +15,11 @@
 		"@swc/cli": "^0.1.57",
 		"@swc/core": "^1.3.8",
 		"@types/koa": "^2.13.5",
+		"@types/koa-static": "^4.0.2",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"koa": "^2.13.4",
+		"koa-static": "^5.0.0",
 		"npm-run-all": "^4.1.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
