--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,9 +5,10 @@ on:
         types: [published]
 
 jobs:
-    build:
+    publish:
         runs-on: ubuntu-latest
-
+        env:
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         steps:
             - uses: actions/checkout@v3
             - uses: pnpm/action-setup@v2.0.1
