--- a/playground/package.json
+++ b/playground/package.json
@@ -5,20 +5,21 @@
 		"dev": "run-p \"dev:*\"",
 		"dev:server": "swc -s -C module.type=commonjs ./server.ts -o ./server.js && node ./server.js",
 		"dev:remix": "remix watch",
+		"build": "remix build",
 		"prepare": "pnpm link ../"
 	},
 	"dependencies": {
-		"@remix-run/dev": "^1.7.2",
-		"@remix-run/node": "^1.7.2",
-		"@remix-run/react": "^1.7.2",
-		"@remix-run/server-runtime": "^1.7.2",
-		"@swc/cli": "^0.1.57",
-		"@swc/core": "^1.3.8",
+		"@remix-run/dev": "^1.13.0",
+		"@remix-run/node": "^1.13.0",
+		"@remix-run/react": "^1.13.0",
+		"@remix-run/server-runtime": "^1.13.0",
+		"@swc/cli": "^0.1.62",
+		"@swc/core": "^1.3.36",
 		"@types/koa": "^2.13.5",
 		"@types/koa-static": "^4.0.2",
-		"@types/react": "^18.0.21",
-		"@types/react-dom": "^18.0.6",
-		"koa": "^2.13.4",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"koa": "^2.14.1",
 		"koa-static": "^5.0.0",
 		"npm-run-all": "^4.1.5",
 		"react": "^18.2.0",
