--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,7 +15,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [16, 18, 20]
+                node-version: [16, 18]
         steps:
             - uses: actions/checkout@v3
             - uses: pnpm/action-setup@v2.0.1
