--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,21 +15,28 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [16]
+                node-version: [16, 18]
         steps:
             - uses: actions/checkout@v3
             - uses: pnpm/action-setup@v2.0.1
               with:
-                  version: 6.20.3
+                  version: 8
+
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'pnpm'
+
             - name: Install dependencies
               run: pnpm install
+
             - run: pnpm build
+
             - run: (cd ./playground; pnpm install)
+
             - run: pnpm lint
+
             - run: pnpm typecheck
+
             - run: pnpm test
