--- a/package.json
+++ b/package.json
@@ -59,28 +59,28 @@
 	},
 	"devDependencies": {
 		"@michaelhelvey/microtest": "^2.1.0",
-		"@remix-run/node": "^1.19.2",
-		"@remix-run/server-runtime": "^1.19.2",
-		"@types/koa": "^2.13.8",
-		"@types/node": "^20.4.7",
-		"@typescript-eslint/eslint-plugin": "^6.2.1",
-		"@typescript-eslint/parser": "^6.2.1",
-		"@vitest/coverage-c8": "^0.33.0",
-		"eslint": "^8.46.0",
+		"@remix-run/node": "^2.7.2",
+		"@remix-run/server-runtime": "^2.7.2",
+		"@types/koa": "^2.15.0",
+		"@types/node": "^20.11.20",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
+		"@vitest/coverage-v8": "^1.3.1",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-jest": "^27.2.3",
+		"eslint-plugin-jest": "^27.9.0",
 		"eslint-plugin-node": "^11.1.0",
 		"husky": "^8.0.3",
-		"koa": "^2.14.2",
+		"koa": "^2.15.0",
 		"lint-staged": "^13.2.3",
-		"prettier": "^3.0.1",
+		"prettier": "^3.2.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"tsup": "^7.2.0",
+		"tsup": "^8.0.2",
 		"tsx": "^3.12.7",
-		"typescript": "5.1.6",
+		"typescript": "5.3.3",
 		"vite": "^4.4.8",
 		"vite-tsconfig-paths": "^4.2.0",
-		"vitest": "^0.34.1"
+		"vitest": "^1.3.1"
 	}
 }
