--- a/playground/package.json
+++ b/playground/package.json
@@ -3,17 +3,15 @@
 	"type": "commonjs",
 	"scripts": {
 		"dev": "run-p \"dev:*\"",
-		"dev:server": "swc -s -C module.type=commonjs ./server.ts -o ./server.js && node ./server.js",
-		"dev:remix": "remix watch",
+		"dev:build": "swc -s -C module.type=commonjs ./server.ts -o ./server.js",
+		"dev:remix": "remix dev -c \"node ./server.js\"",
 		"build": "remix build",
 		"prepare": "pnpm link ../"
 	},
 	"dependencies": {
-		"@remix-run/dev": "^1.19.2",
-		"@remix-run/node": "^1.19.2",
-		"@remix-run/react": "^1.19.2",
-		"@remix-run/server-runtime": "^1.19.2",
-		"@swc/cli": "^0.1.62",
+		"@remix-run/dev": "^2.7.2",
+		"@remix-run/react": "^2.7.2",
+		"@swc/cli": "^0.3.9",
 		"@swc/core": "^1.3.36",
 		"@types/koa": "^2.13.5",
 		"@types/koa-static": "^4.0.2",
@@ -24,5 +22,10 @@
 		"npm-run-all": "^4.1.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@remix-run/node": "^2.7.2",
+		"@remix-run/server-runtime": "^2.7.2",
+		"typescript": "^5.3.3"
 	}
 }
