--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,15 @@
 		"types": ["vitest/globals"],
 		"target": "ES2020",
 		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "node",
+		"module": "CommonJS",
+		"moduleResolution": "Node",
 		"noUncheckedIndexedAccess": true,
 		"exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": true,
+		"preserveSymlinks": true,
 		"baseUrl": ".",
 		"paths": {
 			"~/*": ["./src/*"]
