--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "remix-koa-adapter",
-	"version": "1.1.0",
+	"version": "2.0.0",
 	"description": "Koa request server handler for Remix",
 	"homepage": "https://github.com/michaelhelvey/remix-koa-adapter#readme",
 	"repository": {
@@ -27,8 +27,8 @@
 		"dev": "(cd playground; pnpm dev)",
 		"test": "vitest",
 		"test:coverage": "vitest --coverage",
-		"lint": "eslint src --cache --ext .js,.jsx,.ts,.tsx",
-		"build": "tsup-node ./src/index.ts --format cjs,esm --dts --target=es2021 --clean",
+		"lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
+		"build": "tsup-node ./src/index.ts --format cjs,esm --dts --target=es2021 --clean --tsconfig ./tsconfig.build.json",
 		"format": "prettier --write src/**/*.ts",
 		"typecheck": "tsc --noEmit",
 		"validate": "pnpm lint && pnpm test -- run && pnpm typecheck && pnpm build",
@@ -58,29 +58,29 @@
 		"koa": ">=2"
 	},
 	"devDependencies": {
-		"@michaelhelvey/microtest": "^2.1.0",
-		"@remix-run/node": "^2.7.2",
-		"@remix-run/server-runtime": "^2.7.2",
+		"@michaelhelvey/microtest": "^2.1.1",
+		"@remix-run/node": "^2.8.1",
+		"@remix-run/server-runtime": "^2.8.1",
 		"@types/koa": "^2.15.0",
-		"@types/node": "^20.11.20",
-		"@typescript-eslint/eslint-plugin": "^7.0.2",
-		"@typescript-eslint/parser": "^7.0.2",
+		"@types/node": "^20.11.27",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
 		"@vitest/coverage-v8": "^1.3.1",
 		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^8.10.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jest": "^27.9.0",
 		"eslint-plugin-node": "^11.1.0",
-		"husky": "^8.0.3",
+		"husky": "^9.0.11",
 		"koa": "^2.15.0",
-		"lint-staged": "^13.2.3",
+		"lint-staged": "^15.2.2",
 		"prettier": "^3.2.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tsup": "^8.0.2",
-		"tsx": "^3.12.7",
-		"typescript": "5.3.3",
-		"vite": "^4.4.8",
-		"vite-tsconfig-paths": "^4.2.0",
+		"tsx": "^4.7.1",
+		"typescript": "5.4.2",
+		"vite": "^5.1.6",
+		"vite-tsconfig-paths": "^4.3.1",
 		"vitest": "^1.3.1"
 	}
 }
