--- a/playground/package.json
+++ b/playground/package.json
@@ -21,7 +21,8 @@
 		"koa-static": "^5.0.0",
 		"npm-run-all": "^4.1.5",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"remix-koa-adapter": "file:../"
 	},
 	"devDependencies": {
 		"@remix-run/node": "^2.7.2",
